# .env

./: README.md  config.toml  install  install.ps1  install.sh  pyproject.toml
.config/alacritty/: alacritty.yml
.config/autostart/: polybar.desktop
.config/fish/: config.fish
.config/polybar/: colours.ini  config.ini  module.ini
.config/polybar/scripts/: polywins.sh
etc/: pacman.conf  paru.conf
etc/sudoers.d/: 01_pw_feedback
lib.ps1/: log.ps1
pkgs/: pacman.list  paru.list
pkgs/fmt/: pacman.txt  paru.txt
utils/: __init__.py  applog.py  scoop.py  status.py
